--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.12",
-    "@angular/fire": "^20.0.0-rc.0",
+    "@angular/fire": "^17.0.0",
     "@angular/forms": "^17.3.12",
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
+    "@ngrx/signals": "^17.1.0",
+    "@ngrx/store": "^17.2.0",
     "firebase": "^10.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +31,7 @@
     "@angular/cli": "~17.3.17",
     "@angular/compiler-cli": "^17.3.12",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
